@@ -69,9 +69,7 @@
             <key> <string>roles</string> </key>
             <value>
               <tuple>
-                <string>Assignee</string>
-                <string>Assignor</string>
-                <string>Manager</string>
+                <string>Developer</string>
               </tuple>
             </value>
         </item>
